--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,3 +36,89 @@
     transform: rotate(360deg);
   }
 }
+
+.carTable .car:hover{
+ background-color: rgb(238, 237, 237);
+}
+.myNavbar{
+  background-color: white;
+}
+.brand{
+  background-color: black;
+  text-align: left;
+}
+.user{
+  background-color: black;
+  text-align: right;
+  height: 66px;
+  align-content: center;
+}
+.slope {
+  height: 0;
+  border-bottom: 66px solid black;
+  border-right: 50px solid white;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 0;
+}
+.slope2 {
+  height: 0;
+  border-top: 66px solid black;
+  border-left: 50px solid white;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 0;
+}
+.white{
+  color:white;
+}
+#dropdown-basic-button{
+  text-emphasis-color: black;
+  background-color: transparent;
+  border-color: black;
+  border-radius: 0%;
+  color:black;
+}
+.linkify{
+  cursor:pointer;
+}
+.linkify:hover{
+  cursor:pointer;
+  color:lightskyblue;
+  text-decoration: underline;
+}
+.filtro{
+  color:red;
+  cursor:pointer;
+  
+}
+.filtro:hover{
+  color: purple;
+  
+}
+.green{
+  color:rgb(87, 187, 87);
+}
+.red{
+  color: rgb(248, 108, 108);
+}
+body { 
+  padding-top: 90px; 
+}
+.form-group .form-control , .form-group .custom-select {
+  text-emphasis-color: black;
+  background-color: transparent;
+  border-color: black;
+  border-radius: 0%;
+  color:black;
+}
+#confirmButton{
+  color:rgb(0, 0, 0);
+  background-color: rgba(3, 105, 3, 0.548);
+  border-color: rgba(0, 0, 0, 0.562);
+  border-radius: 0%;
+  box-shadow: black;
+  
+}
