--- a/client/src/App.css
+++ b/client/src/App.css
@@ -115,10 +115,18 @@ body {
   color:black;
 }
 #confirmButton{
-  color:rgb(0, 0, 0);
-  background-color: rgba(3, 105, 3, 0.548);
+  color:rgb(255, 255, 255);
+  background-color: rgb(0, 140, 255);
   border-color: rgba(0, 0, 0, 0.562);
   border-radius: 0%;
-  box-shadow: black;
+  box-shadow: 2px 2px 4px #838383af;
+  
+}
+#confirmButton:active{
+  color:rgb(0, 140, 255);
+  background-color: rgb(255, 255, 255);
+  border-color: rgba(0, 0, 0, 0.562);
+  border-radius: 0%;
+  box-shadow: 2px 2px 4px #838383af;
   
 }
