feat: form validation

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -130,3 +130,12 @@ body {
   box-shadow: 2px 2px 4px #838383af;
   
 }
+
+#confirmButton:disabled{
+  color:rgb(255, 255, 255);
+  background-color: rgba(0, 140, 255, 0.404);
+  border-color: rgba(0, 0, 0, 0.562);
+  border-radius: 0%;
+  box-shadow: 2px 2px 4px #81818156;
+  
+}
